--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 				</h3>
 				<p class="btn-resize-mode p-bloc-1-style">
 					<strong>&nbsp;<strong>2021/08</strong></strong> &nbsp; Receive funding support from the Chinese National Natural Science Foundation!<br>
-					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Dependable and Secure Computing (TDSC) (Impact Factor 6.513)!<br>
+					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Dependable and Secure Computing (TDSC) (Impact Factor 7.329)!<br>
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; Receive funding support from the China Postdoctoral Science Foundation!<br>
-					<strong>&nbsp;<strong>2021/03</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Visualization and Computer Graphics (TVCG) (Impact Factor 7.74)!<br>
+					<strong>&nbsp;<strong>2021/03</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Visualization and Computer Graphics (TVCG) (Impact Factor 4.579)!<br>
 					<strong>&nbsp;<strong>2020/09</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on on Circuits and Systems for Video Technology (Impact Factor 4.685)!<br>
 				</p>
 				<h3 class="mg-md">
@@ -128,32 +128,32 @@
 				</h3>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Distribution-Preserving Steganography Based on Text-to-Speech Generative Models . <br><strong>Kejiang Chen</strong>, Hang Zhou, Hanqing Zhao, Dongdong Chen, Weiming Zhang* and Nenghai Yu.<br> IEEE Transactions on Dependable and Secure Computing (TDSC). 2021. <br>Arxiv version: When Provably Secure Steganography Meets Generative Models.&nbsp;
+						Distribution-Preserving Steganography Based on Text-to-Speech Generative Models. <br><strong>Kejiang Chen</strong>, Hang Zhou, Hanqing Zhao, Dongdong Chen, Weiming Zhang* and Nenghai Yu.<br> IEEE Transactions on Dependable and Secure Computing (TDSC), 2021. <br>Arxiv version: When Provably Secure Steganography Meets Generative Models.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Adversarial Examples Detection beyond Image Space <br> <strong>Kejiang Chen</strong>, Yuefeng Chen, Hang Zhou, Chuan Qin, Xiaofeng Mao, Weiming Zhang* and Nenghai Yu. <br> International Conference on Acoustics, Speech, & Signal Processing (ICASSP), 2021.&nbsp;
+						Adversarial Examples Detection beyond Image Space. <br> <strong>Kejiang Chen</strong>, Yuefeng Chen, Hang Zhou, Chuan Qin, Xiaofeng Mao, Weiming Zhang* and Nenghai Yu. <br> International Conference on Acoustics, Speech, & Signal Processing (ICASSP), 2021.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Three-Dimensional Mesh Steganography and Steganalysis: A Review <br> Hang Zhou, Weiming Zhang*, <strong>Kejiang Chen</strong>*, Weixiang Li and Nenghai Yu. <br> IEEE Transactions on Visualization and Computer Graphics (TVCG). 2021.&nbsp;
+						Three-Dimensional Mesh Steganography and Steganalysis: A Review. <br> Hang Zhou, Weiming Zhang*, <strong>Kejiang Chen</strong>*, Weixiang Li and Nenghai Yu. <br> IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Reversible Data Hiding in JPEG Images under Multi-distortion Metric <br> <strong>Kejiang Chen</strong>, Hang Zhou, Dongdong Hou, Weiming Zhang* and Nenghai Yu. <br> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). 2020.&nbsp;
+						Reversible Data Hiding in JPEG Images under Multi-distortion Metric. <br> <strong>Kejiang Chen</strong>, Hang Zhou, Dongdong Hou, Weiming Zhang* and Nenghai Yu. <br> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2020.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Adversarial Batch Image Steganography against CNN-based Pooled Steganalysis<br> Li Li, Weiming Zhang*, Chuan Qin, <strong>Kejiang Chen</strong>*, Wenbo Zhou and Nenghai Yu. <br> Signal Processing. 2020.&nbsp;
+						Adversarial Batch Image Steganography against CNN-based Pooled Steganalysis.<br> Li Li, Weiming Zhang*, Chuan Qin, <strong>Kejiang Chen</strong>*, Wenbo Zhou and Nenghai Yu. <br> Signal Processing, 2020.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Feature-preserving Tensor Voting Model for Mesh Steganalysis<br> Hang Zhou, <strong>Kejiang Chen</strong>, Weiming Zhang, Chuan Qin, Nenghai Yu. <br> IEEE Transactions on Visualization and Computer Graphics (TVCG). 2020.&nbsp;
+						Feature-preserving Tensor Voting Model for Mesh Steganalysis.<br> Hang Zhou, <strong>Kejiang Chen</strong>, Weiming Zhang, Chuan Qin, Nenghai Yu. <br> IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
@@ -163,7 +163,7 @@
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						JPEG Steganography with Estimated Side-information<br> Weixiang Li,  <strong>Kejiang Chen</strong>, Weiming Zhang*, Hang Zhou, Yaofei Wang, Nenghai Yu. <br> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). 2020.&nbsp;
+						JPEG Steganography with Estimated Side-information.<br> Weixiang Li, <strong>Kejiang Chen</strong>, Weiming Zhang*, Hang Zhou, Yaofei Wang, Nenghai Yu. <br> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). 2020.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
@@ -183,7 +183,7 @@
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						DUP-Net: Denoiser and upsampler network for 3D adversarial point clouds defense. <br> Hang Zhou, <strong>Kejiang Chen</strong>, Weiming Zhang*, Han Fang, Wenbo Zhou, Nenghai Yu. <br> IEEE International Conference on Computer Vision (ICCV), 2019.&nbsp;
+						DUP-Net: Denoiser and Upsampler Network for 3D Adversarial Point Clouds Defense. <br> Hang Zhou, <strong>Kejiang Chen</strong>, Weiming Zhang*, Han Fang, Wenbo Zhou, Nenghai Yu. <br> IEEE International Conference on Computer Vision (ICCV), 2019.&nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
