--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
 			<div class="col-md-6 align-self-end">
 				<h2 class="mg-md h2-style">
 					Kejiang Chen
-				</h2><img src="img/lazyload-ph.png" data-src="img/sign.png" class="img-fluid img-style float-lg-none mg-md lazyload" alt="name" />
+				</h2><img src="img/lazyload-ph.png" data-src="img/sign2.png" class="img-fluid img-style float-lg-none mg-md lazyload" alt="name" />
 				<p class="btn-resize-mode p-1-style mg-clear">
-					<a href="https://scholar.google.com/citations?hl=zh-CN&amp;user=bGKyyB8AAAAJ" target="_blank">[Google Scholar]</a><br><strong>Postdoctor of University of Science and Technology of China</strong><br><br><strong>Email:</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;chenkj@ustc.edu.cn,chenkj@mail.ustc.edu.cn<br><strong>HomePage:</strong> &nbsp; &nbsp; http://coriverchen.github.io/<br><strong>Address:</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;West Campus USTC, No.443, Huangshan Road, Hefei, Anhui, 230027, P. R. China<br>
+					<a href="https://scholar.google.com/citations?hl=zh-CN&amp;user=bGKyyB8AAAAJ" target="_blank">[Google Scholar]</a>
+					<a href="https://dblp.org/pid/193/7669.html" target="_blank">[DBLP]</a>
+					<a href="https://www.researchgate.net/profile/Kejiang-Chen" target="_blank">[ReseachGate]</a>
+					<br><strong>Postdoctor of University of Science and Technology of China</strong><br><br><strong>Email:</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;chenkj@ustc.edu.cn,chenkj@mail.ustc.edu.cn<br><strong>HomePage:</strong> &nbsp; &nbsp; http://coriverchen.github.io/<br><strong>Address:</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;West Campus USTC, No.443, Huangshan Road, Hefei, Anhui, 230027, P. R. China<br>
 				</p>
 			</div>
 		</div>
@@ -98,7 +101,7 @@
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Dependable and Secure Computing (TDSC) (Impact Factor 7.329)!<br>
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; Receive funding support from the China Postdoctoral Science Foundation!<br>
 					<strong>&nbsp;<strong>2021/03</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Visualization and Computer Graphics (TVCG) (Impact Factor 4.579)!<br>
-					<strong>&nbsp;<strong>2020/09</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on on Circuits and Systems for Video Technology (Impact Factor 4.685)!<br>
+					<strong>&nbsp;<strong>2020/09</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on on Circuits and Systems for Video Technology (TCSVT) (Impact Factor 4.685)!<br>
 				</p>
 				<h3 class="mg-md">
 					<span class="fa fa-mortar-board"></span>&nbsp; Education
