--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<span class="fa fa-bullhorn"></span>&nbsp; News!
 				</h3>
 				<p class="btn-resize-mode p-bloc-1-style">
-					<strong>&nbsp;<strong>2021/08</strong></strong> &nbsp; Receive funding support from the Chinese National Natural Science Foundation!<br>
+					<strong>&nbsp;<strong>2021/08</strong></strong> &nbsp; Receive funding support from the National Natural Science Foundation of China!<br>
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Dependable and Secure Computing (TDSC) (Impact Factor 7.329)!<br>
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; Receive funding support from the China Postdoctoral Science Foundation!<br>
 					<strong>&nbsp;<strong>2021/03</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Visualization and Computer Graphics (TVCG) (Impact Factor 4.579)!<br>
