--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-5-style">
-						<strong>2015/09-2020/07<br></strong>Doctor of Cybersecurity<br>University of Science and Technology of China (USTC)<br>
+						<strong>2015/09-2020/07<br></strong>Doctor of Cybersecurity<br>University of Science and Technology of China (USTC)<br>Supervisors:<a href="http://staff.ustc.edu.cn/~ynh/" target="_blank">Prof. Nenghai Yu</a> and <a href="http://staff.ustc.edu.cn/~zhangwm" target="_blank">Prof. Weiming Zhang</a><br>
 					</p>
 				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-6-style">
-						<strong>2011/09-2015/06<br></strong>Bachelor of&nbsp; Communication Engineering<br>Shanghai University (SHU)<br>
+						<strong>2011/09-2015/06<br></strong>Bachelor of&nbsp; Communication Engineering<br>Shanghai University (SHU)<br>Supervisor:<a href="https://scie-ie.shu.edu.cn/info/1078/1150.htm" target="_blank">Prof. Guorui Feng</a><br>
 					</p>
 				</div>
 				<h3 class="mg-md">
@@ -249,6 +249,22 @@
 				<p class="p-9-style">
 					<strong>2021/06</strong> China Postdoctoral Science Foundation, 2021M693091
 				</p>
+				<h3 class="mg-md">
+					<span class="fa fa-eye"></span>&nbsp; Professional Activities<br>
+				</h3>
+				<h4>Conference reviewer</h4>
+				<p class="p-9-style">
+					IEEE Conference on Computer Vision and Pattern Recognition (CVPR)
+				</p>
+				<p class="p-9-style">IEEE International Workshop on Information Forensics and Security (WIFS)</p>
+				<h4>Journal reviewer</h4>
+				<p class="p-9-style">IEEE Transactions on Information Forensics and Security (TIFS)</p>
+				<p class="p-9-style">IEEE Transactions on Cybernetics (TCyb)</p>
+				<p class="p-9-style">IEEE Transactions on Multimedia (TMM)</p>
+				<p class="p-9-style">IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</p>
+				<p class="p-9-style">Information Sciences (INS)</p>			
+				<p class="p-9-style">Journal of Visual Communication of Image Representation (JVCIR)</p>			
+				
 			</div>
 		</div>
 	</div>
