--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="row">
 			<div class="col">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
-					<a class="navbar-brand" href="index.html">Kejiang Chen</a>
+					<a class="navbar-brand" href="index.html">Kejiang Chen (陈可江)</a>
 					<button id="nav-toggle" type="button" class="ml-auto ui-navbar-toggler navbar-toggler border-0 p-0" data-toggle="collapse" data-target=".navbar-576" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
