--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/linecons.min.css">
 	<link href='https://fonts.googleapis.com/css?family=PT+Serif+Caption&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Home</title>
+    <title>Kejiang Chen</title>
 
 <!-- Analytics -->
  
