--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
 				<p class="p-9-style">
 					IEEE Conference on Computer Vision and Pattern Recognition (CVPR)
 				</p>
+				<p class="p-9-style">AAAI Conference on Artificial Intelligence (AAAI)</p>
+				
 				<p class="p-9-style">IEEE International Workshop on Information Forensics and Security (WIFS)</p>
 				<h4>Journal reviewer</h4>
 				<p class="p-9-style">IEEE Transactions on Information Forensics and Security (TIFS)</p>
