--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<a href="https://scholar.google.com/citations?hl=zh-CN&amp;user=bGKyyB8AAAAJ" target="_blank">[Google Scholar]</a>
 					<a href="https://dblp.org/pid/193/7669.html" target="_blank">[DBLP]</a>
 					<a href="https://www.researchgate.net/profile/Kejiang-Chen" target="_blank">[ReseachGate]</a>
-					<a href="https://www.semanticscholar.org/author/Kejiang-Chen/8780109 target="_blank">[Semantic Scholar]</a>
+					<a href="https://www.semanticscholar.org/author/Kejiang-Chen/8780109" target="_blank">[Semantic Scholar]</a>
 					<br><strong>Postdoctor of University of Science and Technology of China</strong><br><br><strong>Email:</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;chenkj@ustc.edu.cn,chenkj@mail.ustc.edu.cn<br><strong>HomePage:</strong> &nbsp; &nbsp; http://coriverchen.github.io/<br><strong>Address:</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;West Campus USTC, No.443, Huangshan Road, Hefei, Anhui, 230027, P. R. China<br>
 				</p>
 			</div>
