--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 					<span class="fa fa-bullhorn"></span>&nbsp; News!
 				</h3>
 				<p class="btn-resize-mode p-bloc-1-style">
+					<strong>&nbsp;<strong>2021/10</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Multimedia (TMM) (Impact Factor 6.513)!<br>
 					<strong>&nbsp;<strong>2021/08</strong></strong> &nbsp; Receive funding support from the National Natural Science Foundation of China!<br>
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; One regular paper accepted by IEEE Transactions on Dependable and Secure Computing (TDSC) (Impact Factor 7.329)!<br>
 					<strong>&nbsp;<strong>2021/06</strong></strong> &nbsp; Receive funding support from the China Postdoctoral Science Foundation!<br>
@@ -127,6 +128,11 @@
 				<h3 class="mg-md">
 					<span class="fa fa-newspaper-o"></span>&nbsp;&nbsp;Publications<br>
 				</h3>
+				<div class="blockquote">
+					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
+						Distribution-preserving-based Automatic Data Augmentation for Deep Image Steganalysis. Jiansong Zhang, <br><strong>Kejiang Chen*</strong>, Chuan Qin,  Weiming Zhang and Nenghai Yu.<br> IEEE Transactions on Dependable and Secure Computing (TDSC), 2021. &nbsp;
+					</p>
+				</div>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
 						Distribution-Preserving Steganography Based on Text-to-Speech Generative Models. <br><strong>Kejiang Chen</strong>, Hang Zhou, Hanqing Zhao, Dongdong Chen, Weiming Zhang* and Nenghai Yu.<br> IEEE Transactions on Dependable and Secure Computing (TDSC), 2021. <br>Arxiv version: When Provably Secure Steganography Meets Generative Models.&nbsp;
