--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				</h3>
 				<div class="blockquote">
 					<p class="btn-resize-mode p-15-style p-16-bloc-1-style">
-						Distribution-preserving-based Automatic Data Augmentation for Deep Image Steganalysis. Jiansong Zhang, <br><strong>Kejiang Chen*</strong>, Chuan Qin,  Weiming Zhang and Nenghai Yu.<br> IEEE Transactions on Dependable and Secure Computing (TDSC), 2021. &nbsp;
+						Distribution-preserving-based Automatic Data Augmentation for Deep Image Steganalysis. <br>Jiansong Zhang, <strong>Kejiang Chen*</strong>, Chuan Qin,  Weiming Zhang and Nenghai Yu.<br> IEEE Transactions on Dependable and Secure Computing (TDSC), 2021. &nbsp;
 					</p>
 				</div>
 				<div class="blockquote">
