--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@
 					<span class="fa fa-certificate"></span>&nbsp; Awards<br>
 				</h3>
 				<p class="p-9-style ">
+					<strong>2021</strong>&nbsp;SIGWEB Outstanding Doctoral Dissertation, ACM China
+				<p class="p-9-style ">
 					<strong>2020</strong>&nbsp;Excellent graduates, USTC
 				<p class="p-9-style ">
 					<strong>2020</strong>&nbsp;2nd Prize of Kaggle Deepfake Detection Challenge (DFDC)
