--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 	</div>
 </div>
 <!-- bloc-1 END -->
-
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff&w=a"></script>
 </div>
 <!-- Main container END -->
     
