--- a/index.html
+++ b/index.html
@@ -279,11 +279,13 @@
 				
 			</div>
 		</div>
+		<a href="https://clustrmaps.com/site/1bkgd" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff"></a>
 	</div>
 </div>
 <!-- bloc-1 END -->
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff&w=a"></script>
 </div>
+
+
 <!-- Main container END -->
     
 
