--- a/index.html
+++ b/index.html
@@ -279,8 +279,10 @@
 				
 			</div>
 		</div>
-		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff&w=a"></script>
-		<!-- <a href="https://clustrmaps.com/site/1bkgd" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff"></a> -->
+		<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff&w=a"></script> -->
+		<a href="https://clustrmaps.com/site/1bkgd" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=RswsFslP9ByEnJYVY7uBUKdupsgRkaCc7MrakKGf01g&cl=ffffff"></a>
+		<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=DtWP7xJYy-o5FpUDvy6UU570yTJu1KILEqHRsj3Y1yo&cl=ffffff&w=a"></script> -->
+		<!-- <a href="https://clustrmaps.com/site/19n4b"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=DtWP7xJYy-o5FpUDvy6UU570yTJu1KILEqHRsj3Y1yo&cl=ffffff" /></a> -->
 	</div>
 </div>
 <!-- bloc-1 END -->
